--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ __pycache__/
 
 # C extensions
 *.so
-
+# images
+media/
+# migrations
+feed/migrations/
 # Distribution / packaging
 .Python
 build/
